working/bgg-app-deployment.v2.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
   name: bgg-app-deploymentv2
   namespace: workshop02

spec:
   replicas: 2
   
   strategy:
      type: RollingUpdate
      rollingUpdate:
         maxSurge: 1
         maxUnavailable: 1
   
   selector:
      matchLabels:
         app.kubernetes.io/name: bgg-app-pod
         app.kubernetes.io/version: "v2"

   template:
      metadata:
         name: bgg-app-pod
         labels:
            app.kubernetes.io/name: bgg-app-pod
            app.kubernetes.io/version: "v2"
            owner: engineering

      spec:
         containers:
         - name: bgg-app
           image: stackupiss/bgg-app:v2
           imagePullPolicy: Always
           ports:
           - name: bgg-app-port
             containerPort: 3000
