working/bgg-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
   name: bgg-app-deployment
   namespace: workshop02

spec:
   replicas: 2
   selector:
      matchLabels:
         app.kubernetes.io/name: bgg-app-pod
         app.kubernetes.io/version: "v1"

   template:
      metadata:
         name: bgg-app-pod
         labels:
            app.kubernetes.io/name: bgg-app-pod
            app.kubernetes.io/version: "v1"
            owner: engineering

      spec:
         containers:
         - name: bgg-app
           image: stackupiss/bgg-app:v1
           resources:
             requests:
               cpu: 100m
           imagePullPolicy: Always
           ports:
           - name: bgg-app-port
             containerPort: 3000
