working/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
   name: fortune-deployment
   namespace: workshop02

spec:
   replicas: 2
   selector:
      matchLabels:
         app.kubernetes.io/name: fortune-pod

   template:
      metadata:
         name: fortune-pod
         labels:
            app.kubernetes.io/name: fortune-pod
            app.kubernetes.io/version: "v2"
            owner: engineering

      spec:
         containers:
         - name: fortune
           image: chukmunnlee/fortune:v2
           imagePullPolicy: Always
           ports:
           - name: fortune-port
             containerPort: 3000
